--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk-UA">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
                     </li>
                 </ol>
 
-<br>
+                <br>
 
             </div>
             <div class = "main_navigation">
@@ -66,67 +66,34 @@
         </div>
         <div class = "footer">
             <div class = "footer_content">
-            <h2>Наші студенти</h2>
+                <h2>Наші студенти</h2>
             
             <table>
                 <tr>
-                    <td>
-                        Студент
-                    </td>
-                    <td>
-                        Системне програмне забезпечення
-                    </td>
-                    <td>
-                        Комп'ютерна схемотехніка
-                    </td>
-                    <td>
-                        Internet-Технології
-                    </td>
+                    <td>Студент</td>
+                    <td>Системне програмне забезпечення</td>
+                    <td>Комп'ютерна схемотехніка</td>
+                    <td>Internet-Технології</td>
                 </tr>
                 <tr>
-                    <td>
-                        Щолкін М. М.
-                    </td>
-                    <td>
-                        98 
-                    </td>
-                    <td>
-                        93
-                    </td>
-                    <td>
-                        90
-                    </td>
+                    <td>Щолкін М. М.</td>
+                    <td>98</td>
+                    <td>93</td>
+                    <td>90</td>
                 </tr>
                 <tr>
-                    <td>
-                        Ольховик Д. В.
-                    </td>
-                    <td>
-                        100
-                    </td>
-                    <td>
-                        100
-                    </td>
-                    <td>
-                        100
-                    </td>
+                    <td>Ольховик Д. В.</td>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>100</td>
                 </tr>
                 <tr>
-                    <td>
-                        Щербак А. С.
-                    </td>
-                    <td>
-                        100
-                    </td>
-                    <td>
-                        100 
-                    </td>
-                    <td>
-                        100
-                    </td>
+                    <td>Щербак А. С.</td>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>100</td>
                 </tr>
             </table>
-        </div>
         </div>
     </div>
     </div>
