--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk-UA">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,8 +94,8 @@
                     <td>100</td>
                 </tr>
             </table>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
